<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.sources.SourceActivity">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_action_search"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="collapseActionView|always" />
    <item
        android:id="@+id/action_new_folder"
        android:orderInCategory="1"
        android:title="@string/menu_item_new_folder"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_multi_select"
        android:orderInCategory="2"
        android:title="@string/menu_item_multi_select"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_view_as"
        android:orderInCategory="3"
        android:title="@string/action_viewas"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_sort_by"
        android:orderInCategory="5"
        android:title="@string/action_sort_by"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_storage_usage"
        android:orderInCategory="6"
        android:title="@string/menu_storage_usage"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="8"
        android:title="@string/action_logout"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="10"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>
