<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingEnd="@dimen/dialog_padding"
    android:paddingStart="@dimen/dialog_padding"
    android:paddingTop="18dp">

    <RadioGroup
        android:id="@+id/rdg_sort_by"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/rdg_padding_bottom"
        app:layout_constraintBottom_toTopOf="@id/divider_sort"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/rdb_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/rdb_padding_bottom"
            android:paddingStart="@dimen/rdb_padding"
            android:text="@string/name"
            android:textSize="@dimen/dialog_text" />

        <RadioButton
            android:id="@+id/rdb_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/rdb_padding_bottom"
            android:paddingStart="@dimen/rdb_padding"
            android:text="@string/size"
            android:textSize="@dimen/dialog_text" />

        <RadioButton
            android:id="@+id/rdb_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/rdb_padding_bottom"
            android:paddingStart="@dimen/rdb_padding"
            android:text="@string/type"
            android:textSize="@dimen/dialog_text" />

        <RadioButton
            android:id="@+id/rdb_modified_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/rdb_padding_bottom"
            android:paddingStart="@dimen/rdb_padding"
            android:text="@string/modifiedTime"
            android:textSize="@dimen/dialog_text" />
    </RadioGroup>

    <View
        android:id="@+id/divider_sort"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:background="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@+id/txt_order"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rdg_sort_by" />

    <TextView
        android:id="@+id/txt_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order"
        android:textColor="@color/colorAccentAccent"
        android:textSize="@dimen/dialog_text"
        app:layout_constraintBottom_toTopOf="@id/rdg_order_by"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider_sort" />

    <RadioGroup
        android:id="@+id/rdg_order_by"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_order">

        <RadioButton
            android:id="@+id/rdb_ascending"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/rdb_padding_bottom"
            android:paddingStart="@dimen/rdb_padding"
            android:text="@string/ascending"
            android:textSize="@dimen/dialog_text" />

        <RadioButton
            android:id="@+id/rdb_descending"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/rdb_padding"
            android:text="@string/descending"
            android:textSize="@dimen/dialog_text" />
    </RadioGroup>
</android.support.constraint.ConstraintLayout>