<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingEnd="20dp"
    android:paddingStart="20dp"
    android:paddingTop="12dp">

    <TextView
        android:id="@+id/txt_folders_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_folders_first"
        android:paddingBottom="15dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/txt_hidden_files"/>

    <CheckBox
        android:id="@+id/ckb_folders_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@id/txt_folders_first"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/txt_hidden_files"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="15dp"
        android:text="@string/show_hidden_files"
        app:layout_constraintTop_toBottomOf="@id/txt_folders_first"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/divider_license"/>

    <CheckBox
        android:id="@+id/ckb_hidden_files"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@id/txt_hidden_files"
        app:layout_constraintEnd_toEndOf="parent"/>

    <View
        android:id="@+id/divider_license"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:background="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@+id/txt_license"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_hidden_files" />

    <TextView
        android:id="@+id/txt_license"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/licenses"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:textColor="@color/colorAccentAccent"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/rdg_order_by"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider_license"
        app:layout_constraintBottom_toBottomOf="parent"/>

</android.support.constraint.ConstraintLayout>